--- a/platformio.ini
+++ b/platformio.ini
@@ -28,6 +28,7 @@ lib_deps =
 	espressif/esp32-camera@^2.0.4
 	bodmer/TJpg_Decoder@^1.1.0
 	bblanchon/ArduinoJson@^7.4.2
+	knolleary/PubSubClient @ ^2.8
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 monitor_raw = no
